--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <div class="row flex-lg-row-reverse align-items-center g-5 py-4 mb-4">
     <div class="col-12 col-lg-6">
-        <img src="https://mobimg.b-cdn.net/v3/fetch/e5/e594d337200536d04e08e6584a690275.jpeg" alt="Cooking blog"
+        <img src="https://i0.wp.com/tchakayiti.com/home/wp-content/uploads/2022/10/taco-tchakayiti-haitian-food-blog-food-photography.jpg?fit=800%2C1000&ssl=1" alt="Cooking blog"
             class="d-block mx-lg-auto img-fluid home-img" loading="lazy">
     </div>
     <div class="col-12 col-lg-6">
